move_topic_modal: Fix dropdown shrinking too much for smaller screens.
On smaller screens it is expected that the available space is used
to display much part of the content. 100% width ensures that while
max-width ensures that the dropdown button doesn't become too wide
where there's extra space available.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -843,7 +843,8 @@ ul.popover-group-menu-member-list {
 
     #move_topic_to_stream_widget_wrapper {
         display: flex;
-        width: 50%;
+        /* 230px at 16px/1em */
+        max-width: 14.375em;
 
         .dropdown-widget-button {
             outline: none;
